--- a/style.css
+++ b/style.css
@@ -2,30 +2,58 @@ body {
     font-family: Arial, sans-serif;
     text-align: center;
     margin-top: 50px;
+    background-color: #edeaff;
 }
 
 .stopwatch {
     border: 2px solid #333;
-    padding: 10px;
-    width: 250px;
-    height: 150px;
+    /* padding: 10px; */
+    /* width: 250px; */
+    height: 250px;
     margin: 0 auto;
+    width: 54.7%;
+    max-width: 600px;
+    background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(https://images.pexels.com/photos/4198029/pexels-photo-4198029.jpeg?auto=compress&cs=tinysrgb&w=600) ;
+    background-size: cover;
+    background-repeat: no-repeat;
+    box-shadow: 2px 2px 4px 2px gray;
+    border-radius: 5px;
+
 }
-#display{
-    display: block;
-    background-color: red;
+#displayTime{
+    margin-top: 18%;
+    display: flex;
+    /* background-color: red; */
     width: 100%;
     height: 30px;
     align-items: center;
     justify-content: center;
+    text-align: center;
     color: white;
+    font-size: 20px;
+    font-family: Arial;
+    font-style: italic;
 }
+
+
 .controls {
-    margin-top: 10px;
+    margin-top: 5%;
 }
 
 button {
     padding: 5px 10px;
     margin: 0 5px;
     cursor: pointer;
+    background-color: transparent;
+    border: none;
+    color: white ;
+    box-shadow: 1px 1px 2px 1px whitesmoke;
+    font-family: Montserrat;
+    /* transition: box-shadow  5s; */
+}
+
+button:hover{
+    box-shadow: 2px 2px 3px 2px grey;
+    border-radius: 2px;
+    
 }
